--- a/landing_map/templates/landing_map/lowVisionView.html
+++ b/landing_map/templates/landing_map/lowVisionView.html
@@ -33,17 +33,8 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-8">
           {% include 'landing_map/filterButton.html' %}
-        </div>
-
-        <div class="col-md-4">
-          <div class="add">
-            <button type="button" class="btn btn-primary">
-              <span class="glyphicon glyphicon-star" style="top: 2px;"></span>
-              add to favorite
-            </button>
-          </div>
         </div>
 
         <div class="col-md-4">
@@ -62,7 +53,30 @@
       <!-- alternate view -->
       <div class="col-md-8">
          <div class="row">
+          <div class="col-md-9">
            <p>Showing results near:<br> <span style="font-weight: bold"> {{locationAddress}} </span> </p>
+          </div>
+
+          <div class="col-md-3">
+            <div class="add">
+              <form action = "{% url 'add_favorite' %}" method = "POST" >
+                  {% csrf_token %}
+                  <input type = "hidden" name = x_coord value = '{{x_coord}}'>
+                  <input type = "hidden" name = y_coord value = '{{y_coord}}'>
+                  <input type = "hidden" name = address value = '{{locationAddress}}'>
+                  {% if favorited %}
+                    <button type="button" class="btn btn-default" >
+                      <span class="glyphicon glyphicon-star"></span>
+                        Address Favorited!</button>
+                  {% else %}
+                    <button type="submit" class="btn btn-default" >
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                      add address to favorites</button>
+                  {% endif %}
+              </form>
+            </div>
+          </div>
+
         </div>
         <div class="row table-lowvision">
           {% include 'landing_map/lowVisionTable.html' %}
