--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -65,7 +65,7 @@ p.accessible{
 p.not_accessible{
     color:#BC4F00;}
 #map {
-    height: 600px;
+    height: 550px;
 }
 
 
@@ -189,4 +189,8 @@ div.table-lowvision{
 
 .suggestions-wrapper{
     text-align: left;
+}
+
+.deleteButton{
+    background-color: #d9534f !important;
 }
