--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -2,11 +2,14 @@
     <div class="modal-dialog modal-dialog-centered">
         <!-- Modal content-->
         <div class="modal-content">
+
+            <!-- modal header content -->
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">{{card.text}}</h4>
             </div>
 
+            <!-- modal body content -->
             <div class="modal-body row">
                 <div class="col-md-6">
                     <img src="/static/img/map_dummy.png" alt="dummy image for map" width="280" height="280">
@@ -16,32 +19,50 @@
                     <h5>issue: </h5>
                     <p class="not_accessible">Inaccessible {{card.type}}</p>
 
-                    <h5>description: </h5>
-                    <p>{{card.comment}}</p>
-
                     <h5>time reported: </h5>
                     <p>{{card.time_reported}}</p>
 
-                    <h5>last updated: </h5>
-                    <p>{{card.last_update}}</p>
+                    <h5>Updates: </h5>
+
+                    <!-- all updates -->
+                    <div style="background-color:#ECECEC; border-radius: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">{{card.comment}}</p>
+                        </div>
+                    </div>
+
                 </div>  
                 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default thumbs"> 
+
+                <!-- thumbs up button -->
+                <button type="button" class="btn btn-default verify"> 
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     7
                 </button>
-                <button type="button" class="btn btn-default thumbs"> 
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    1
-                </button>
-                <form action = "{% url 'resolve_report' %}" method = "POST" >
+
+                <!-- resolve report -->
+                <form action = "{% url 'resolve_report' %}" method = "POST" class="verify">
                     {% csrf_token %}
                     <input type = "hidden" name = infraID value = '{{card.card_id}}'>
-                    <button type="submit" class="btn btn-default" style="background-color:#4F7C5E; color:white; width: 25%">
+                    <button type="submit" class="btn btn-default" style="background-color:#4F7C5E; color:white; margin-left: 5px;">
                         Mark as restored</button>
                 </form>
+
+                <!-- post update -->
+                <form class="form-inline">
+                    <div class="form-group mx-sm-3 mb-2">
+                      <input type = "hidden" name = infraID value = '{{card.card_id}}'>
+                      <input type="comment" class="form-control" id="post-update" style="width:210px" 
+                        placeholder="add an update...">
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2" style="background-color:#18435A; color:white;">
+                        Post</button>
+                </form>
+
             </div>
         </div>
     </div>
