added FAQ answers

--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -50,20 +50,29 @@
     <div class="padding">
         <br><br>
             <h2>About Us</h2>
-            <p>We are a small group of NYU graduate students looking attempting to provide street accessibility data to individuals who may be in need of it.</p>
+            <p>We are a small group of NYU graduate students looking to provide NYC street accessibility data to individuals with mobility issues
+               or visual impairments. 
+            </p>
+
             <br>
-                <h2>FAQ</h2>
+
+            <h2>FAQ</h2>
             <h4>How do I report an inaccessible ramp/signal pole?</h4>
                 <p>On the left-hand side of the main page click "report issue" on the card whose location you want to report.
                 Then fill out the issue and description options and click "submit report" to notify us.</p>
+
             <h4>How do I save frequently visited locations?</h4>
                 <p>For each location card on the left hand side of the main page you can click the star in the top right corner
                 of the card to add the location to your favorites. Once the star turns yellow it means it has been added to your
                 favorites.</p>
+
             <h4>Is information on this website moderated?</h4>
                 <p>[answer to question]</p>
+
             <h4>This website is not compatible with my screen reader, what can I do?</h4>
-                <p>[answer to question]</p>
+                <p>If you notice any part of the website that is not screen-reader compatible, please contact us using the form below
+                    by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
+                    
         <br><br>
     </div>
 
