reporting while not logged in change

--- a/landing_map/templates/landing_map/reportModal.html
+++ b/landing_map/templates/landing_map/reportModal.html
@@ -13,6 +13,8 @@
             <div class="form-group">
               <label for="message-text" class="col-form-label">Description:</label>
               <input type = "hidden" name = infraID value = '{{card.card_id}}'>
+              <input type = "hidden" name = x_coord value = '{{x_coord}}'>
+              <input type = "hidden" name = y_coord value = '{{y_coord}}'>
            <textarea name = "comment" class="form-control" id="message-text" style="height: 180px;"></textarea>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
