--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -36,6 +36,7 @@
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     1
                 </button>
+                {% if loggedIn %}
                 <form action = "{% url 'resolve_report' %}" method = "POST" >
                     {% csrf_token %}
                     <input type = "hidden" name = x_coord value = '{{x_coord}}'>
@@ -44,6 +45,13 @@
                     <button type="submit" class="btn btn-default" style="background-color:#4F7C5E; color:white; width: 25%">
                         Mark as restored</button>
                 </form>
+                {% else %}
+                <form method = "link" action = "{% url 'login' %}">
+                    <button type="submit" class="btn btn-default"
+                        style="background-color:#4F7C5E; color:white; width: 25%"> Mark as restored
+                    </button>
+                </form>
+                {% endif %} 
             </div>
         </div>
     </div>
