--- a/landing_map/templates/404.html
+++ b/landing_map/templates/404.html
@@ -44,7 +44,7 @@
     <div class="ctain">
         <img src="/static/img/crosswalk.png" style="margin-top: -20px;" width="100%">
         <div class="centered"><h1 style=font-size:250%>Sorry, that page doesn't exist..</h1>
-            <button onclick="location.href = '/home';" class="btn btn-lg" type="submit">Click here to return home</button>
+            <button onclick="location.href = '/';" class="btn btn-lg" type="submit">Click here to return home</button>
         </div>
     </div>
 
