--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -15,7 +15,7 @@
                     <img src="/static/img/map_dummy.png" alt="dummy image for map" width="280" height="280">
                 </div>
                 
-                <div class="col-md-6 ml-auto view-report">
+                <div class="col-md-6 ml-auto view-report" style='height:300px; overflow-y: scroll'>
                     <h5>issue: </h5>
                     <p class="not_accessible">Inaccessible {{card.type}}</p>
 
@@ -25,11 +25,35 @@
                     <h5>Updates: </h5>
 
                     <!-- all updates -->
-                    <div style="background-color:#ECECEC; border-radius: 5px;">
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
                         <div style="padding: 10px;">
                             <p style="font-size:smaller; margin-bottom: 1px;"> 
                                 <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
                             <p style="margin-bottom: 0px;">{{card.comment}}</p>
+                        </div>
+                    </div>
+
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">{{card.comment}}</p>
+                        </div>
+                    </div>
+
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                        </div>
+                    </div>
+
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
                         </div>
                     </div>
 
