--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -32,6 +32,11 @@
             padding-left: 15px !important;
             padding-right: 30px !important;
         }
+
+        h4{
+            margin-top: 20px;
+        }
+
     </style>
 </head>
 
@@ -41,48 +46,63 @@
         <img src="/static/img/crosswalk.png" style="margin-top: -20px;" width="100%">
         <div class="centered"><h1 style=font-size:300%>Help</h1></div>
     </div>
+
     <div class="padding">
         <br><br>
-    <h2>About Us</h2>
-    <p>We are a small group of NYU graduate students looking attempting to provide street accessibility data to individuals who may be in need of it.</p>
-    <br>
-        <h2>FAQ</h2>
-    <h3>How do I report an inaccessible ramp/signal pole?</h3>
-        <p>On the left-hand side of the main page click "report issue" on the card whose location you want to report.
-        Then fill out the issue and description options and click "submit report" to notify us.</p>
-    <h3>How do I save frequently visited locations?</h3>
-        <p>For each location card on the left hand side of the main page you can click the star in the top right corner
-        of the card to add the location to your favorites. Once the star turns yellow it means it has been added to your
-        favorites.</p>
-    <h3>Is information on this website moderated?</h3>
-        <p>[answer to question]</p>
-    <h3>This website is not compatible with my screen reader, what can I do?</h3>
-        <p>[answer to question]</p>
-<br><br>
+            <h2>About Us</h2>
+            <p>We are a small group of NYU graduate students looking to provide NYC street accessibility data to individuals with mobility issues
+               or visual impairments. 
+            </p>
+
+            <br>
+
+            <h2>FAQ</h2>
+            <h4>How do I report an inaccessible ramp/signal pole?</h4>
+                <p>On the left-hand side of the main page click "report issue" on the card whose location you want to report.
+                Then fill out the issue and description options and click "submit report" to notify us.</p>
+
+            <h4>How do I save frequently visited locations?</h4>
+                <p>For each location card on the left hand side of the main page you can click the star in the top right corner
+                of the card to add the location to your favorites. Once the star turns yellow it means it has been added to your
+                favorites.</p>
+
+            <h4>Is information on this website moderated?</h4>
+                <p>[answer to question]</p>
+
+            <h4>This website is not compatible with my screen reader, what can I do?</h4>
+                <p>If you notice any part of the website that is not screen-reader compatible, please contact us using the form below
+                    by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
+                    
+        <br><br>
     </div>
 
-{% load crispy_forms_tags %}
+    {% load crispy_forms_tags %}
     <div class="padding">
         <h2>Contact Us</h2>
-<form method="POST" action="">
-    {% csrf_token %}
-    <div class="col-md-6 col-12">
-        <div class="form-group">
-            {{helpform.email|as_crispy_field}}
-        </div>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="col-md-12">
+                <div class="form-group">
+                    {{helpform.email|as_crispy_field}}
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    {{helpform.subject|as_crispy_field}}
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    {{helpform.message|as_crispy_field}}
+                </div>
+            </div>
+            <div class="col-md-12" style="margin-bottom:30px">
+                <button style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">
+                    Submit</button>
+            </div>
+        </form>
     </div>
-    <div class="col-md-6 col-12">
-        <div class="form-group">
-            {{helpform.subject|as_crispy_field}}
-        </div>
-    </div>
-    <div class="col-md-6 col-12">
-        <div class="form-group">
-            {{helpform.message|as_crispy_field}}
-        </div>
-    </div>
-    <button class="btn btn-lg" type="submit">Submit</button>
-</form>
-    </div>
+
+
 </body>
 </html>
