earlier redirect to login if reporting issue

--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -71,6 +71,8 @@
                 <!-- resolve report -->
                 <form action = "{% url 'resolve_report' %}" method = "POST" class="verify">
                     {% csrf_token %}
+                    <input type = "hidden" name = x_coord value = '{{x_coord}}'>
+                    <input type = "hidden" name = y_coord value = '{{y_coord}}'>
                     <input type = "hidden" name = infraID value = '{{card.card_id}}'>
                     <button type="submit" class="btn btn-default" style="background-color:#4F7C5E; color:white; margin-left: 5px;">
                         Mark as restored</button>
