--- a/landing_map/templates/landing_map/cardDetails.html
+++ b/landing_map/templates/landing_map/cardDetails.html
@@ -32,10 +32,18 @@
                 </button>
             {% endif %}
             {% if card.isAccessible %}
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form_{{card.card_id}}"
+                {% if loggedIn%}
+                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form_{{card.card_id}}"
                         style=" background-color:#18435A; color:white">
-                    report issue
-                </button>
+                        report issue
+                    </button>
+                {% else %}
+                    <form method = "link" action = "{% url 'login' %}">
+                        <button type="submit" class="btn btn-default btn-sm"
+                        style=" background-color:#18435A; color:white"> report issue
+                        </button>
+                    </form>
+                {% endif %}
             {% endif %}
         {% endif %}
     </div>
