--- a/landing_map/templates/landing_map/report_detail.html
+++ b/landing_map/templates/landing_map/report_detail.html
@@ -2,47 +2,66 @@
     <div class="modal-dialog modal-dialog-centered">
         <!-- Modal content-->
         <div class="modal-content">
+
+            <!-- modal header content -->
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">{{report.address}}</h4>
             </div>
 
+            <!-- modal body content -->
             <div class="modal-body row">
                 <div class="col-md-6">
                     <img src="/static/img/map_dummy.png" alt="dummy image for map" width="280" height="280">
                 </div>
                 
-                <div class="col-md-6 ml-auto view-report">
-                    <h5>issue: </h5>
-                    <p class="not_accessible">Inaccessible {{card.type}}</p>
-
-                    <h5>description: </h5>
-                    <p>{{report.desc}}</p>
+                <div class="col-md-6 ml-auto view-report" style='height:300px; overflow-y: scroll'>
+                    <h5>Issue: </h5>
+                    <p class="not_accessible">Inaccessible {{report.infraType}}</p>
 
                     <h5>time reported: </h5>
                     <p>{{report.createdAt}}</p>
 
-                    <h5>last updated: </h5>
-                    <p>{{report.updatedAt}}</p>
+                    <h5>Updates: </h5>
+
+                    <!-- all updates -->
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">{{card.comment}}</p>
+                        </div>
+                    </div>
+
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">{{card.comment}}</p>
+                        </div>
+                    </div>
+
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                        </div>
+                    </div>
+
+                    <div style="background-color:#ECECEC; border-radius: 5px; margin-bottom: 5px;">
+                        <div style="padding: 10px;">
+                            <p style="font-size:smaller; margin-bottom: 1px;"> 
+                                <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
+                            <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                        </div>
+                    </div>
+
                 </div>  
                 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default thumbs"> 
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    7
-                </button>
-                <button type="button" class="btn btn-default thumbs"> 
-                    <span class="glyphicon glyphicon-thumbs-down"></span>
-                    1
-                </button>
-                <form action = "{% url 'resolve_report' %}" method = "POST" >
-                    {% csrf_token %}
-                    <input type = "hidden" name = infraID value = '{{card.card_id}}'>
-                    <!-- <button type="submit" class="btn btn-default" style="background-color:#4F7C5E; color:white; width: 25%">
-                        Mark as restored</button> -->
-                </form>
             </div>
         </div>
     </div>
 </div>
+
+
