fixed issues with report modal

--- a/landing_map/templates/landing_map/report_detail.html
+++ b/landing_map/templates/landing_map/report_detail.html
@@ -29,7 +29,7 @@
                         <div style="padding: 10px;">
                             <p style="font-size:smaller; margin-bottom: 1px;"> 
                                 <b style="color:#18435A;">username · </b>Nov. 13, 2022, 4:05 p.m.</p>
-                            <p style="margin-bottom: 0px;">{{card.comment}}</p>
+                            <p style="margin-bottom: 0px;">{{report.desc}}</p>
                         </div>
                     </div>
 
