--- a/accounts/templates/password_reset_sent.html
+++ b/accounts/templates/password_reset_sent.html
@@ -23,16 +23,15 @@
 
                                     <p>We've emailed you instructions for setting your password. </p>
                                     <p>If an account exists with the email you
-                                        entered. You should recieve them shortly.</p>
-
-                                    <p>If you don't recieve an email, please make sure you've entered the address you registered with,
-                                        and check your spam folder</p>
+                                        entered, you should receive them shortly.</p>
+                                    <p>If you don't receive an email, please make sure you've entered the address you registered with,
+                                        and check your spam folder.</p>
                                 </body>
                             </div>
                         </div>
                     </div>
                 </div>
-    
+
             </div>
         </div>
     
