add help page content

--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -35,6 +35,12 @@
 
         h4{
             margin-top: 20px;
+            color:#18435A;
+        }
+
+        .padding{
+            padding-left: 5%;
+            padding-right: 5%;
         }
 
     </style>
@@ -49,29 +55,58 @@
 
     <div class="padding">
         <br><br>
-            <h2>About Us</h2>
-            <p>We are a small group of NYU graduate students looking to provide NYC street accessibility data to individuals with mobility issues
-               or visual impairments. 
+            <h2>About The Product</h2>
+            <p>NYC Accessible Streets is an application designed to provide NYC street accessibility data to individuals with mobility issues
+               or visual impairments. Millions of disabled individuals or elderly gets stranded on the streets due to being dropped off at an 
+               inaccessible location by their ride-share services. Our product tackles that problem by allowing users to search for any address in new york city 
+               and view nearby accessible ramps and signal poles, as well as inaccessible raised sidewalks. They can also view reports of temporarily inaccessible 
+               infrastructures near their searched locations. This will ensure that these users get to their destination safely.
             </p>
+
+            <p>Additionally, registered user can interact with the community by submitting reports, adding updates to reports, and verify the status
+               of reports by reacting with a thumbs up button. Logged-in users also have the ability to add their frequently visited addresses
+               to a list of favorites and share their favorite locations with friends and family.
+            </p>
+
+            <!-- <h2>Tutorial Video</h2>
+            <video width="100%" height="auto" controls>
+                <source src="" type="video/mp4">
+            </video> -->
 
             <br>
 
             <h2>FAQ</h2>
-            <h4>How do I report an inaccessible ramp/signal pole?</h4>
-                <p>On the left-hand side of the main page click "report issue" on the card whose location you want to report.
-                Then fill out the issue and description options and click "submit report" to notify us.</p>
+            <h4>I see inaccessible ramp/signal pole on the street. How can I report it?</h4>
+                <p>On the left-hand side of the main page click <b>Report Issue</b> on the card whose location you want to report.
+                Then fill out the issue and description options and click <b>Submit Report</b> to notify us. After the report is submitted,
+                you should see the pin icon change, and the card should now have be outlined in red and show the option for 
+                all users to to <b>View Issue</b>. You can add updates to the issue, thumbs up to verify the issue, or mark it as resovled
+                when the location becomes accessible again.</p>
+
+            <h4>Can I share addresses with my family?</h4>
+                <p>Of course! You can easily copy addresses of accessible infrastructures by clicking on any card on the left side of the 
+                map page. If you want to share all pins near an address, simply click on the share icon on the right side right above the map to
+                share that entire address.</p>
+
+            <h4>How can I access low vision mode?</h4>
+                <p>If our map is not accessible for you, you can alternatively view information of all the infrastructures using our low vision view.
+                On the map page, click on the <b>Low Vision View</b> button on the navigation bar. You will now see an alternative tabular view of all the pin
+                information. To go back to map view, simply click on the <b>Map View</b> button on the navigation bar. </p>
 
             <h4>How do I save frequently visited locations?</h4>
-                <p>For each location card on the left hand side of the main page you can click the star in the top right corner
-                of the card to add the location to your favorites. Once the star turns yellow it means it has been added to your
-                favorites.</p>
+                <p> On the right hand side of the map page, you can click the 'add address to favorite' button to add the location 
+                to your favorites. Once the it has been successfully added, you should see 'address favorited!' on the screen. You can then 
+                view your list of favorites by clicking on the <b>My Favorites</b> button in the navigation bar. Only registered 
+                users have this ability to create their own list, so be sure to create an account and log in first.</p>
 
             <h4>Is information on this website moderated?</h4>
-                <p>[answer to question]</p>
+                <p>We have admin and staff members moderating all reports and users during working hours, Monday-Friday. If we see any 
+                inappropriate comments or spam, they will be immediately removed. Any false information will also be removed from the website 
+                as soon as possible. Users that consistently submit inappropriate content will be warned and removed.</p>
 
             <h4>This website is not compatible with my screen reader, what can I do?</h4>
                 <p>If you notice any part of the website that is not screen-reader compatible, please contact us using the form below
-                    by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
+                by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
                     
         <br><br>
     </div>
