change button hover color

--- a/landing_map/templates/500.html
+++ b/landing_map/templates/500.html
@@ -36,6 +36,10 @@
             color: white;
             background-color: transparent;
         }
+
+        button:hover{
+            color: #d4ad7d;
+        }
     </style>
 </head>
 
@@ -43,7 +47,7 @@
 {% include 'common/navbar.html' %}
     <div class="ctain">
         <img src="/static/img/crosswalk.png" style="margin-top: -20px;" width="100%">
-        <div class="centered"><h1 style=font-size:250%>Sorry, that link is invalid..</h1>
+        <div class="centered"><h1 style=font-size:250%>Sorry, that link is invalid...</h1>
             <button onclick="location.href = '/';" class="btn btn-lg" type="submit">Click here to return home</button>
         </div>
     </div>
