--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -46,8 +46,8 @@ a.nav-list:hover{
 
 .centered {
     position: absolute;
-    top: 40%;
-    left: 50%;
+    top: 35%;
+    left: 52% !important;
     transform: translate(-50%, -50%);
 }
 
