--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -95,5 +95,6 @@
 
 <script src="{% static 'landing_map/maps.js' %} "></script>
 <script src="{% static 'landing_map/filter.js' %} "></script>
+<script src="{% static 'landing_map/reportsMap.js' %} "></script>
 </body>
 </html>
