--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div id="pin_{{card.card_id}}_details" class="modal fade" role="dialog">
     <div class="modal-dialog modal-dialog-centered">
         <!-- Modal content-->
@@ -12,7 +13,7 @@
             <!-- modal body content -->
             <div class="modal-body row">
                 <div class="col-md-6">
-                    <img src="/static/img/map_dummy.png" alt="dummy image for map" width="280" height="280">
+                    <div><div id="map_report_{{card.card_id}}" style=" width:280px; height:280px"></div></div>
                 </div>
                 
                 <div class="col-md-6 ml-auto view-report" style='height:300px; overflow-y: scroll'>
