--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -194,3 +194,13 @@ div.table-lowvision{
 .deleteButton{
     background-color: #d9534f !important;
 }
+
+textarea {
+    resize: none;
+}
+
+#count_message {
+  background-color: smoke;
+  margin-top: -20px;
+  margin-right: 5px;
+}
