Added maps to reports on mappage

--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -13,7 +13,7 @@
             <!-- modal body content -->
             <div class="modal-body row">
                 <div class="col-md-6">
-                    <div><div id="map_report_{{card.card_id}}" style=" width:280px; height:280px"></div></div>
+                    <div id="map_report_{{card.card_id}}" style=" width:280px; height:280px"></div>
                 </div>
                 
                 <div class="col-md-6 ml-auto view-report" style='height:300px; overflow-y: scroll'>
